--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -14,6 +14,8 @@
 /Main$21.class
 /Main$22.class
 /Main$23.class
+/Main$24.class
+/Main$25.class
 /Main$3.class
 /Main$4.class
 /Main$5.class
@@ -21,10 +23,8 @@
 /Main$7.class
 /Main$8.class
 /Main$9.class
-/Service.class
-/Main$24.class
-/Main$25.class
-/Main$26.class
-/DecimalFormatRenderer.class
 /Main$DecimalFormatRenderer.class
+/Main.class
+/Service.class
 /Testfil.pdf
+/2017-01-01 Prislista generell (2).pdf
